--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <groupId>simpleDB</groupId>
     <artifactId>simpleDB-parent</artifactId>
     <packaging>pom</packaging>
-    <version>2.8</version>
+    <version>2.8-SNAPSHOT</version>
     <name>Simple DB Parent Project</name>
 
     <properties>
